2000-04-13  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el (tnt-turn-on-debugging): added
	(tnt-turn-off-debugging): added
	(tnt-affect-debugging): added
	(tnt-handle-config): Set up permit/deny correctly
	(tnt-config-to-blist): Also parse permit/deny stuff
	(tnt-blist-to-config): Also spit out permit deny stuff

	* toc.el (toc-permit-only): Added
	(toc-deny-only): Added
	(toc-permit-all): Added
	(toc-deny-all): Added
	(toc-add-permit): Simplified
	(toc-add-deny): Simplified

2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-send-text-as-chat-invitation): you can now give the
	name of one of your buddy groups in the list of people to invite.
	(tnt-expand-groups-for-chat-invitation): given the user-list,
	replaces any groups with all the members of that group who are
	currently online and are not already in this chat.
	(tnt-online-buddies-and-groups-collection): added.  for
	tab-completion of the invite list.  basically appends the list of
	all online buddies with the list of all groups (whether or not
	anyone in that group is currently online).

2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-completing-read-list): removed extraneous (let
	((collection collection)) ...)

2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-my-name-face and tnt-other-name-face): now only
	create these faces if they don't already exist.  point being that
	if they do exist, the user may have set different colors than the
	defaults, so we don't want to change those.  this is really only
	an issue for us developers, since end-users are unlikely to be
	reloading tnt.el after they've changed the colors.  but i reload
	tnt.el all the time, and (before) i was always having to reset my
	colors.

2000-04-12  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-append-message): insert time stamp whether or not
	this is a message from a user.

2000-04-12  John Jannotti  <jj@lcs.mit.edu>
